--- a/desafio5/views/pages/products.ejs
+++ b/desafio5/views/pages/products.ejs
@@ -14,8 +14,8 @@
       <thead>
         <tr>
           <th scope="col">Nombre</th>
-          <th scope="col">Apellido</th>
-          <th scope="col">Edad</th>
+          <th scope="col">Preio</th>
+          <th scope="col">Foto</th>
         </tr>
       </thead>
       <tbody>
