--- a/desafio5/views/pages/index.ejs
+++ b/desafio5/views/pages/index.ejs
@@ -12,8 +12,8 @@
       <h1>Ingrese datos</h1>
       <form action="/products" method="post">
         <input type="text" name="nombre" placeholder="Ingrese nombre" id="">
-        <input type="text" name="apellido" placeholder="Ingrese apellido" id="">
-        <input type="number" name="edad" placeholder="Ingrese edad" id="">
+        <input type="text" name="apellido" placeholder="Ingrese precio" id="">
+        <input type="text" name="edad" placeholder="Foto url" id="">
         <input type="submit" value="Enviar">
       </form>
     </div>
