--- a/desafio5/views/pages/index.ejs
+++ b/desafio5/views/pages/index.ejs
@@ -11,9 +11,9 @@
     <div class="jumbotron">
       <h1>Ingrese datos</h1>
       <form action="/products" method="post">
-        <input type="text" name="nombre" placeholder="Ingrese nombre" id="">
-        <input type="text" name="apellido" placeholder="Ingrese precio" id="">
-        <input type="text" name="edad" placeholder="Foto url" id="">
+        <input type="text" name="Nombre" placeholder="Ingrese nombre" id="">
+        <input type="text" name="Precio" placeholder="Ingrese precio" id="">
+        <input type="text" name="Foto Url" placeholder="Foto url" id="">
         <input type="submit" value="Enviar">
       </form>
     </div>
