--- a/desafio6/views/pages/index.ejs
+++ b/desafio6/views/pages/index.ejs
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <%- include('../partials/head'); %>
-  <%- include('../partials/scripts'); %>
 </head>
 <body>
   <header>
@@ -43,9 +42,42 @@
         <h4>Mensajes:</h4>
         <div id="messages"></div>
       </div>
- 
- 
- 
-     
-</body>
-</html>
+
+      
+      <script src="https://cdn.socket.io/4.5.3/socket.io.min.js" integrity="sha384-WPFUvHkB1aHA5TDSZi6xtDgkF0wXJcIIxXhC6h8OT8EH3fC5PWro5pWJ1THjcfEi" crossorigin="anonymous"></script>
+      <script>
+        const socket = io();
+//chat
+    socket.on('conversation', (messages) => {
+    const messagesHtml = messages.map((message) => `
+      <div>
+        <strong style= "color: blue">${message.mail}:  </strong>
+        <em>[<em style="color:brown">${message.date}</em>]: <i style= "color: green">${message.text}</i></em>
+      </div>`)
+    .join(' ');
+
+  document.getElementById("messages").innerHTML = messagesHtml;
+});
+
+//obtengo entradas de chats
+const form = document.getElementById("form")
+
+form.addEventListener("submit", (event) => {
+  event.preventDefault();
+  const mail = document.getElementById('mail').value;
+  const text = document.getElementById('text').value;
+
+  //creacion de data en GB para formato en 24hs
+  const date = new Date().toLocaleString("en-GB");
+
+  console.log(({
+    mail, date, text
+  }));
+  const message = { mail, date, text }
+  socket.emit('new-message', message);
+});
+
+      </script>
+ </body>
+ <%- include('../partials/scripts'); %>
+ </html>
