--- a/desafio9Clase22/views/pages/index.ejs
+++ b/desafio9Clase22/views/pages/index.ejs
@@ -51,7 +51,11 @@
 
       
       <script src="https://cdn.socket.io/4.5.3/socket.io.min.js" integrity="sha384-WPFUvHkB1aHA5TDSZi6xtDgkF0wXJcIIxXhC6h8OT8EH3fC5PWro5pWJ1THjcfEi" crossorigin="anonymous"></script>
-      <script>
+      
+      
+      
+      <script src= "https://cdn.jsdelivr.net/npm/normalizr@3.6.1/dist/normalizr.browser.min.js">
+
         const socket = io();
 //chat
 //import { normalize, denormalize, schema } from "normalizr";
@@ -74,7 +78,7 @@
 
       //se introducen los mensajes desnormalizados para iterar en la etiqueta
       const html = makeHtmlList (mensajesNsize.mensajes)
-      document.getElementById("conversation").innerHTML = html;
+      document.getElementById("messages").innerHTML = html;
     });
 
     function makeHtmlList (menssages) {
@@ -122,7 +126,7 @@ form.addEventListener("submit", (event) => {
   socket.emit('new-message', message);
 });
 
-     </script>
+</script>
  </body>
  <%- include('../partials/scripts'); %>
  </html>
