--- a/desafio9Clase22/views/partials/header.ejs
+++ b/desafio9Clase22/views/partials/header.ejs
@@ -4,6 +4,8 @@
       <li class="nav-item">
         <a class="nav-link" href="/">Home</a>
       </li>
-      
+      <li class="nav-item">
+        <a class="nav-link" href="/products">productos</a>
+      </li>
     </ul>
   </nav>
