--- a/desafio18Clase44/views/pages/login.ejs
+++ b/desafio18Clase44/views/pages/login.ejs
@@ -10,7 +10,7 @@
 
       <h1>LOGIN</h1>
       <br>
-      <form class="form" action="/login" method="post" role="form" autocomplete="off">
+      <form class="form" action="/cafeteria/login" method="post" role="form" autocomplete="off">
 
         <div class="form-group">
           <input id="nombre" name='username' placeholder="nombre" class="form-control" type="text" required>
@@ -27,7 +27,7 @@
 
       <hr>
       <div class="text-left">
-        <button class="btn btn-success my-3" onclick="location.href = '/register'">Ir a Register</button>
+        <button class="btn btn-success my-3" onclick="location.href = '/cafeteria/register'">Ir a Register</button>
       </div>
 
     </div>
