--- a/desafio18Clase44/views/pages/register.ejs
+++ b/desafio18Clase44/views/pages/register.ejs
@@ -10,7 +10,7 @@
 
       <h1>REGISTER</h1>
       <br>
-      <form class="form" action="/register" method="post" role="form" autocomplete="off">
+      <form class="form" action="/cafeteria/register" method="post" role="form" autocomplete="off">
 
         <div class="form-group">
           <input id="nombre" name='username' placeholder="nombre" class="form-control" type="text" required>
@@ -28,7 +28,7 @@
       <hr>
 
       <div class="text-left">
-        <button class="btn btn-success my-3" onclick="location.href = '/login'">Ir a Login</button>
+        <button class="btn btn-success my-3" onclick="location.href = '/cafeteria/login'">Ir a Login</button>
       </div>
 
     </div>
