--- a/desafio18Clase44/views/pages/index.ejs
+++ b/desafio18Clase44/views/pages/index.ejs
@@ -17,6 +17,8 @@
     <form class="form-inline" action="/products" method="post">
       <input class="form-control mb-2 mr-sm-2" type="text" name="title" placeholder="Ingrese nombre" id="">
       <input class="form-control mb-2 mr-sm-2" type="text" name="price" placeholder="Ingrese precio" id="">
+      <input class="form-control mb-2 mr-sm-2" type="text" name="description" placeholder="Ingrese descripcion" id="">
+      <input class="form-control mb-2 mr-sm-2" type="text" name="category" placeholder="Ingrese categoria" id="">
       <input class="form-control mb-2 mr-sm-2" type="text" name="thumbnail" placeholder="Foto url" id="">
       <input class="btn btn-primary" type="submit" value="Enviar">
     </form>
