--- a/trabajoFinalGomezClaudio/views/pages/login.ejs
+++ b/trabajoFinalGomezClaudio/views/pages/login.ejs
@@ -27,7 +27,7 @@
 
       <hr>
       <div class="text-left">
-        <button class="btn btn-success my-3" onclick="location.href = '/cafeteria/register'">Ir a Register</button>
+        <button class="btn btn-success my-3" onclick="location.href = '/register'">Ir a Register</button>
       </div>
 
     </div>
