--- a/trabajoFinalGomezClaudio/views/pages/not-found.ejs
+++ b/trabajoFinalGomezClaudio/views/pages/not-found.ejs
@@ -3,7 +3,7 @@
 <head>
     <%- include('../partials/head'); %>
 </head>
-<body style="background-image: url('https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/styles/hc_1440x810/public/media/image/2022/07/simpson-moe-szyslak-2751499.jpg')">
+<body style="background-image: url('https://i.postimg.cc/52mNF02J/qiming-chen-lz-CH2-8q-RH8-unsplash.jpg')">
     <div class="container text-center my-3">
         <div class="jumbotron" style="background-color: salmon;color: white;">
             <h1>OUCH! ESTA RUTA NO EXISTE.</h1>
