--- a/trabajoFinalGomezClaudio/views/pages/products.ejs
+++ b/trabajoFinalGomezClaudio/views/pages/products.ejs
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +10,7 @@
   </header>
 
   <div class="jumbotron">
-  <h1>Historial</h1>
+  <h1>Productos</h1>
   <% if (productos.length && productos.length != 0) { %>
     
     <table class="table">
@@ -38,5 +39,190 @@
     <% } %>
 
   </div>
+</body>
+</html>
+--->
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <%- include('../partials/head'); %>
+</head>
+
+<body style="background-color: rgb(40, 40, 40);">
+    <header>
+        <%- include("../partials/welcome");%>
+    </header>
+
+    <!-- LISTA DE PRODUCTOS -->
+    <div style="padding: 2% 2% 5% 2%; background-color: #9c9c9c; border-radius: 0.3rem; margin: 2% 2% 2% 2%;">
+        <h2>PRODUCTOS</h2>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">
+                        <h5>Productos</h5>
+                    </th>
+                    <th scope="col">
+                        <h5>Precio</h5>
+                    </th>
+                    <th scope="col">
+                        <h5>Imagen</h5>
+                    </th>
+                    <th scope="col">
+                    </th>
+                </tr>
+                <hr>
+                <br>
+            </thead>
+            <!-- Bebidas de muestra (no estan en base de datos) -->
+            <tbody>
+                <tr>
+                    <td scope="col">Coca-Cola</td>
+                    <td scope="col">15</td>
+                    <td scope="col"><img
+                            src="https://s4d-images.telepizza.es/Products/Original/Coca-Cola_Original_1L_-2535.png"
+                            style="height: 80px" /></td>
+                    <td scope="col">No disponible</td>
+                </tr>
+                <tr>
+                    <td scope="col">Duff</td>
+                    <td scope="col">20</td>
+                    <td scope="col"><img src="https://dbdzm869oupei.cloudfront.net/img/sticker/preview/22413.png"
+                            style="height: 80px" /></td>
+                    <td scope="col">No disponible</td>
+                </tr>
+                <tr>
+                    <td scope="col">Llamarada Moe</td>
+                    <td scope="col">50</td>
+                    <td scope="col"><img
+                            src="http://d3ugyf2ht6aenh.cloudfront.net/stores/001/164/129/products/grilla-491-4d93a1196c0344a9b415944381223489-640-0.png"
+                            style="height: 80px; border-radius: 20%;" /></td>
+                    <td scope="col">No disponible</td>
+
+                </tr>
+                <tr>
+                    <td scope="col">Jugo de Tomaco</td>
+                    <td scope="col">100</td>
+                    <td scope="col"><img
+                            src="https://i.pinimg.com/originals/2e/6f/fd/2e6ffd9a718f08b3a89ca124f1006cde.jpg"
+                            style="height: 80px; width: 80px; border-radius: 20%;" /></td>
+                    <td scope="col">No disponible</td>
+                </tr>
+            <tbody id="productList">
+                <!-- Despliegue de lista de bebidas -->
+            </tbody>
+            </tbody>
+        </table>
+    </div>
+
+    <!-- PEDIDO -->
+    <div style="padding: 2% 2% 5% 2%; background-color: #9c9c9c; border-radius: 0.3rem; margin: 2% 2% 2% 2%;">
+        <h3>Agregar nueva bebida:</h3>
+        <hr>
+        <form id="formAgregarProductos" action="/productos" method="post">
+            <!-- Campo nombre del producto -->
+            <div class="form-group">
+                <label for="nombre">Nombre:</label>
+                <input id="nombre" class="form-control mb-2 mr-sm-2" type="text" name="title" required>
+            </div>
+
+            <!-- Campo precio del producto -->
+            <div class="form-group">
+                <label for="precio">Precio:</label>
+                <input id="precio" class="form-control mb-2 mr-sm-2" type="number" step="0.01" name="price" required>
+            </div>
+
+            <!-- Campo url de la foto del producto -->
+            <div class="form-group">
+                <label for="foto">Foto URL:</label>
+                <input id="foto" class="form-control mb-2 mr-sm-2" type="url" name="thumbnail" required>
+            </div>
+
+            <!-- Campo descripcion del producto -->
+            <div class="form-group">
+                <label for="description">Descripción:</label>
+                <textarea id="description" class="form-control mb-2 mr-sm-2" type="text" name="description"
+                    required></textarea>
+            </div>
+
+            <!-- Campo categoria del producto -->
+            <div class="form-group">
+                <label for="category">Categoría:</label>
+                <select name="category" class="form-control" required>
+                    <option value="jugo" selected>Jugo</option>
+                    <option value="gaseosa">Gaseosa</option>
+                    <option value="cerveza">Cerveza</option>
+                    <option value="trago">Trago</option>
+                </select>
+            </div>
+
+            <!-- Botón de envío -->
+            <button class="btn btn-dark mt-3" type="submit">Enviar</button>
+        </form>
+    </div>
+
+    <!-- SCRIPTS -->
+
+    <script>
+        function getProducts () {
+            console.log('getProducts...')
+            const options = {
+                method: 'GET',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+            }
+            return fetch('/productos', options)
+                .then(response => response.json())
+                .then((products) => {
+                    const productsListHTML = products
+                        .map(
+                            (products) => `
+            <tr>
+                <td scope="col">${products.title}</td>
+                <td scope="col">${products.price}</td>
+                <td scope="col">
+                    <img src = ${products.thumbnail} style="height: 80px; width: 80px; border-radius: 20%;"/>
+                </td>
+                <td scope="col"><button class="btn btn-danger" title="Eliminar bebida" id="${products.id}" onClick="eliminarBebida(event)">Eliminar</button></td>
+            </tr>
+            `
+                        )
+                        .join('')
+
+                    const productsList = document.getElementById('productList')
+                  productsList.innerHTML = productsListHTML
+                })
+                .catch((error) => {
+                    console.log(error)
+                })
+        }
+
+        function eliminarproducto (event) {
+            const idProduct = event.target.id
+            deleteDrink(idProduct)
+        }
+
+        function deleteProduct(idProduct) {
+            console.log('deleteProduct...')
+            const options = {
+                method: 'DELETE',
+                headers: {
+                    'Content-Type': 'application/json',
+                }
+            }
+            return fetch(`/productos/${idProduct}`, options)
+                .then(() => {
+                    getProducts()
+                })
+                .catch((error) => {
+                    console.log(error)
+                })
+        }
+        getProducts()
+    </script>
 </body>
 </html>
