--- a/trabajoFinalGomezClaudio/views/pages/register.ejs
+++ b/trabajoFinalGomezClaudio/views/pages/register.ejs
@@ -11,13 +11,34 @@
       <h1>REGISTER</h1>
       <br>
       <form class="form" action="/register" method="post" role="form" autocomplete="off">
+        <label>Información personal:</label>
 
         <div class="form-group">
-          <input id="nombre" name='username' placeholder="nombre" class="form-control" type="text" required>
+          <input id="fullname" name='fullname' placeholder="Ingrese su nombre completo" class="form-control" type="text" required>
+        </div>
+        
+        <div class="form-group">
+          <input id="username" name='username' placeholder="ingrese un username" class="form-control" type="text" required>
+        </div>
+        
+        <div class="form-group">
+          <input id="email" name='email' placeholder="ingrese su email" class="form-control" type="text" required>
+        </div>
+
+        <div class="form-group">
+          <input id="telefono" name='telefono' placeholder="ingrese su telefono" class="form-control" type="text" required>
         </div>
 
         <div class="form-group">
           <input id="password" name='password' placeholder="password" class="form-control" type="password" required>
+        </div>
+
+        <div class="form-group">
+          <label for="rol">Tipo de usuario:</label>
+          <select name="rol" class="form-control">
+            <option value= "1"selected>Cliente</option>
+            <option value= "2" >Administrador</option>
+          </select>
         </div>
 
         <div class="form-group">
@@ -28,7 +49,7 @@
       <hr>
 
       <div class="text-left">
-        <button class="btn btn-success my-3" onclick="location.href = '/cafeteria/login'">Ir a Login</button>
+        <button class="btn btn-success my-3" onclick="location.href = '/login'">Ir a Login</button>
       </div>
 
     </div>
