--- a/trabajoFinalGomezClaudio/views/pages/home.ejs
+++ b/trabajoFinalGomezClaudio/views/pages/home.ejs
@@ -5,7 +5,7 @@
   <%- include("../partials/head"); %>
 </head>
 
-<body style="background-color: rgb(40, 40, 40);">
+<body style="background-color: #a3927257;">
   <header>
     <%- include("../partials/welcome"); %>
   </header>
@@ -23,9 +23,9 @@
     background-color: #999;">
   </div>
 
-  <% if (username.rol=='1' ) { %>
+  <% if (rol = "1" ) { %>
   <!-- LISTA DE BEBIDAS -->
-  <div style="padding: 2% 2% 5% 2%; background-color: #9c9c9c; border-radius: 0.3rem; margin: 2% 2% 2% 2%;">
+  <div style="padding: 2% 2% 5% 2%; background-color: #a3927257; border-radius: 0.3rem; margin: 2% 2% 2% 2%;">
     <h2>PRODUCTOS</h2>
     <table class="table">
       <thead>
@@ -48,34 +48,34 @@
       <!-- Bebidas de muestra (no estan en base de datos) -->
       <tbody>
         <tr>
-          <td scope="col">Coca-Cola</td>
-          <td scope="col">15</td>
-          <td scope="col"><img src="https://s4d-images.telepizza.es/Products/Original/Coca-Cola_Original_1L_-2535.png"
-              style="height: 80px" /></td>
-          <td scope="col">No disponible</td>
-        </tr>
-        <tr>
-          <td scope="col">Duff</td>
-          <td scope="col">20</td>
-          <td scope="col"><img src="https://dbdzm869oupei.cloudfront.net/img/sticker/preview/22413.png"
-              style="height: 80px" /></td>
-          <td scope="col">No disponible</td>
-        </tr>
-        <tr>
-          <td scope="col">Llamarada Moe</td>
-          <td scope="col">50</td>
-          <td scope="col"><img
-              src="http://d3ugyf2ht6aenh.cloudfront.net/stores/001/164/129/products/grilla-491-4d93a1196c0344a9b415944381223489-640-0.png"
+          <td scope="col">Cafe Cortado</td>
+          <td scope="col">150</td>
+          <td scope="col"><img src="https://i.postimg.cc/Bn2YWjNH/jeremy-yap-jn-Ha-GWe4yw-unsplash.jpg"
               style="height: 80px; border-radius: 20%;" /></td>
-          <td scope="col">No disponible</td>
+          <td scope="col">Solo Muestra</td>
+        </tr>
+        <tr>
+          <td scope="col">Cafe Expresso</td>
+          <td scope="col">200</td>
+          <td scope="col"><img src="https://i.postimg.cc/0NcCxDSM/photo-1498709112912-9be3173d30be-crop-faces-edges-cs-tinysrgb-fit-crop-fm-jpg-ixid-Mnwx-Mj-A3f-DB8-MXxhb.jpg"
+              style="height: 80px; border-radius: 20%;" /></td>
+          <td scope="col">Solo Muestra</td>
+        </tr>
+        <tr>
+          <td scope="col">Late</td>
+          <td scope="col">150</td>
+          <td scope="col"><img
+              src="https://i.postimg.cc/PfZ2vpsc/photo-1541167760496-1628856ab772-crop-faces-edges-cs-tinysrgb-fit-crop-fm-jpg-ixid-Mnwx-Mj-A3f-DB8-MXxhb.jpg"
+              style="height: 80px; border-radius: 20%;" /></td>
+          <td scope="col">Solo Muestra</td>
 
         </tr>
         <tr>
-          <td scope="col">Jugo de Tomaco</td>
+          <td scope="col">Te Helado</td>
           <td scope="col">100</td>
-          <td scope="col"><img src="https://i.pinimg.com/originals/2e/6f/fd/2e6ffd9a718f08b3a89ca124f1006cde.jpg"
+          <td scope="col"><img src="https://i.postimg.cc/LXFgcsCY/photo-1571934811356-5cc061b6821f-crop-faces-edges-cs-tinysrgb-fit-crop-fm-jpg-ixid-Mnwx-Mj-A3f-DB8-MXxhb.jpg"
               style="height: 80px; width: 80px; border-radius: 20%;" /></td>
-          <td scope="col">No disponible</td>
+          <td scope="col">Solo Muestra</td>
         </tr>
       <tbody id="drinkList">
         <!-- Despliegue de lista de bebidas -->
@@ -84,23 +84,11 @@
     </table>
   </div>
 
-  <!-- PEDIDO -->
-  <div style="padding: 2% 2% 5% 2%; background-color: #9c9c9c; border-radius: 0.3rem; margin: 2% 2% 2% 2%;">
-    <h3>Mi pedido</h3>
-    <hr>
-    <table class="table">
-      <tbody id="productsPedido">
-        <!-- Despliegue de bebidas del pedido -->
-      </tbody>
-    </table>
-    <button class="btn btn-danger" title="Eliminar todas las bebidas del pedido" onClick="vaciarPedido()">Vaciar
-      pedido</button>
-    <button class="btn btn-dark" type="submit" name="comprar" disabled>Enviar pedido</button>
-  </div>
+
   <% } %>
 
   <!-- COMENTARIOS -->
-  <div style="padding: 2% 2% 5% 2%; background-color: #9c9c9c; border-radius: 0.3rem; margin: 2% 2% 2% 2%;">
+  <div style="padding: 2% 2% 5% 2%; background-color: #a3927257; border-radius: 0.3rem; margin: 2% 2% 2% 2%;">
     <h2>Comentarios</h2>
     <hr>
     <form id="form" autocomplete="off">
@@ -120,45 +108,27 @@
 
     <!-- Comentarios de muestra (no estan en base de datos) -->
     <div>
-      <strong style="color:darkblue;">Moe Szyslak</strong>
-      <em>[<em style="color:brown">01/04/2023, 11:05:00</em>]: <i style="color: darkgreen">¡BIENVENIDOS A LA ZONA DE
+      <strong style="color:darkblue;">CAFETERIA online</strong>
+      <em>[<em style="color:brown">01/04/2023, 17:05:00</em>]: <i style="color: darkgreen">¡BIENVENIDOS A LA ZONA DE
           COMENTARIOS!</i></em>
     </div>
     <div>
-      <strong style="color: darkblue">Jefe Gorgory</strong>
-      <em>[<em style="color:brown">01/04/2023, 17:10:00</em>]: <i style="color: darkgreen">Hola, no veo la opcion de las
-          rosquillas...</i></em>
+      <strong style="color: darkblue">Gs</strong>
+      <em>[<em style="color:brown">01/04/2023, 17:10:00</em>]: <i style="color: darkgreen">Hola, cuanto cuesta el envio? </i></em>
     </div>
     <div>
-      <strong style="color: darkblue">Homero Simpson</strong>
-      <em>[<em style="color:brown">02/04/2023, 06:10:00</em>]: <i style="color: darkgreen">Alguien sabe si esta abierto
-          el bar?</i></em>
+      <strong style="color: darkblue">CAFETERIA online</strong>
+      <em>[<em style="color:brown">02/04/2023, 17:11:00</em>]: <i style="color: darkgreen">Hola, el envio es sin cargo en compras mayores a 2000 pesos</i></em>
     </div>
     <div>
-      <strong style="color: darkblue">Homero Simpson</strong>
-      <em>[<em style="color:brown">02/04/2023, 06:11:00</em>]: <i style="color: darkgreen">Estoy ansioso de volver a
-          probar una Llamarada Moe</i></em>
+      <strong style="color: darkblue">Gs</strong>
+      <em>[<em style="color:brown">02/04/2023, 17:11:00</em>]: <i style="color: darkgreen">Buenisimooo... Ahi te hago un pedido</i></em>
     </div>
     <div>
-      <strong style="color: darkblue">Barney Gomez</strong>
-      <em>[<em style="color:brown">02/04/2023, 06:13:00</em>]: <i style="color: darkgreen">Hola Homero, estoy esperando
-          afuera hasta que abra...</i></em>
+      <strong style="color: darkblue">CAFETERIA online</strong>
+      <em>[<em style="color:brown">02/04/2023, 17:13:00</em>]: <i style="color: darkgreen">Dale cualquier duda estamos a disposicion...</i></em>
     </div>
-    <div>
-      <strong style="color: darkblue">Carl</strong>
-      <em>[<em style="color:brown">02/04/2023, 06:18:00</em>]: <i style="color: darkgreen">Muchachos son las 6 de la
-          mañana...</i></em>
-    </div>
-    <div>
-      <strong style="color: darkblue">Flanders</strong>
-      <em>[<em style="color:brown">02/04/2023, 06:19:00</em>]: <i style="color: darkgreen">Hola tarolas! Vecinirigillos!
-          Se que es temprano pero si gustan una cerveza pueden venir a mi sala de juegos!</i></em>
-    </div>
-    <div>
-      <strong style="color: darkblue">Homero Simpson: </strong>
-      <em>[<em style="color:brown">02/04/2023, 06:21:00</em>]: <i style="color: darkgreen">Deja dormir al projimo
-          Flanderssss!</i></em>
-    </div>
+  
     <div id="mensajes">
       <!-- Despliegue de comentarios -->
     </div>
