--- a/trabajoFinalGomezClaudio/views/pages/register.ejs
+++ b/trabajoFinalGomezClaudio/views/pages/register.ejs
@@ -35,9 +35,9 @@
 
         <div class="form-group">
           <label for="rol">Tipo de usuario:</label>
-          <select name="rol" class="form-control">
-            <option value= "1"selected>Cliente</option>
-            <option value= "2" >Administrador</option>
+          <select name='rol' class="form-control">
+            <option value="1"selected>Cliente</option>
+            <option value="2" >Administrador</option>
           </select>
         </div>
 
