--- a/trabajoFinalGomezClaudio/views/partials/welcome.ejs
+++ b/trabajoFinalGomezClaudio/views/partials/welcome.ejs
@@ -5,14 +5,17 @@
       <li class="nav-item">
         <a class="nav-link" href="/">Home</a>
       </li>
-      <% if (username.rol=="2" ) { %>
+      <% if (rol = "2" ) { %>
         <li class="nav-item">
-          <a class="nav-link" href="/admin/productos">Productos</a>
+          <a class="nav-link" href="/adminProductos">Productos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/carrito">Carrito</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/stats">Info</a>
         </li>
-      <% } %>
+          <% } %>
       </ul>
       <div class="float-right">
         <button class="btn btn-danger" onclick="location.href='/logout'">
