--- a/trabajoFinalGomezClaudio/views/pages/adminProducts.ejs
+++ b/trabajoFinalGomezClaudio/views/pages/adminProducts.ejs
@@ -145,7 +145,7 @@
                         )
                         .join('')
 
-                    const productsList = document.getElementById('productList')
+                    const productsList = document.getElementById('productsList')
                   productsList.innerHTML = productsListHTML
                 })
                 .catch((error) => {
