--- a/trabajoFinalGomezClaudio/views/pages/home.ejs
+++ b/trabajoFinalGomezClaudio/views/pages/home.ejs
@@ -85,9 +85,7 @@
         </tr>
       <tbody id="productsList">
         <!-- Despliegue de lista de Productos -->
-        <script>
-        getProducts() 
-        </script>
+        
           
       </tbody>
       </tbody>
@@ -157,22 +155,22 @@
             const options = {
                 method: 'GET',
                 headers: {
-                    'Content-Type': 'application/json',
+                    "Content-Type": "application/json",
                 },
             }
             return fetch('/productos', options)
                 .then(response => response.json())
-                .then((products) => {
-                    const productsListHTML = products
+                .then((productos) => {
+                    const productsListHTML = productos
                         .map(
-                            (products) => `
+                            (product) => `
             <tr>
-                <td scope="col">${products.title}</td>
-                <td scope="col">${products.price}</td>
+                <td scope="col">${product.title}</td>
+                <td scope="col">${product.price}</td>
                 <td scope="col">
-                    <img src = ${products.thumbnail} style="height: 80px; width: 80px; border-radius: 20%;"/>
+                    <img src = ${product.thumbnail} style="height: 80px; width: 80px; border-radius: 20%;"/>
                 </td>
-                <td scope="col"><button class="btn btn-danger" title="Eliminar bebida" id="${products.id}" onClick="eliminarBebida(event)">Eliminar</button></td>
+                <td scope="col"><button class="btn btn-danger" title="Eliminar bebida" id="${product.id}" onClick="eliminarBebida(event)">Eliminar</button></td>
             </tr>
             `
                         )
@@ -185,6 +183,30 @@
                     console.log(error)
                 })
         }
+
+        function eliminarBebida (event) {
+          const idProduct = event.target.id
+          deleteProduct(idProduct)
+        }
+
+        function deleteProduct(idProduct) {
+          console.log('deleteProduct...')
+            const options = {
+                method: 'DELETE',
+                headers: {
+                    'Content-Type': 'application/json',
+                }
+            }
+            return fetch(`/productos/${idProduct}`, options)
+                .then(() => {
+                  ()
+                })
+                .catch((error) => {
+                    console.log(error)
+                })
+        }
+        getProducts()
+        
 
 
   </script>
