--- a/trabajoFinalGomezClaudio/views/pages/adminProducts.ejs
+++ b/trabajoFinalGomezClaudio/views/pages/adminProducts.ejs
@@ -73,7 +73,7 @@
 
     <!-- PEDIDO -->
     <div style="padding: 2% 2% 5% 2%; background-color: #9c9c9c; border-radius: 0.3rem; margin: 2% 2% 2% 2%;">
-        <h3>Agregar nueva bebida:</h3>
+        <h3>Agregar nuevo producto:</h3>
         <hr>
         <form id="formAgregarProductos" action="/productos" method="post">
             <!-- Campo nombre del producto -->
