--- a/trabajoFinalGomezClaudio/views/partials/welcome.ejs
+++ b/trabajoFinalGomezClaudio/views/partials/welcome.ejs
@@ -5,12 +5,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/">Home</a>
       </li>
-      <% if (rol = "2" ) { %>
+      <% if (rol == "1" ) { %>
         <li class="nav-item">
-          <a class="nav-link" href="/adminProductos">Productos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/carrito">Carrito</a>
+          <a class="nav-link" href="/admin/productos">Productos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/stats">Info</a>
