--- a/trabajoFinalGomezClaudio/views/pages/home.ejs
+++ b/trabajoFinalGomezClaudio/views/pages/home.ejs
@@ -23,7 +23,7 @@
     background-color: #999;">
   </div>
 
-  <% if (rol == "1" ) { %>
+  <% if (rol == "1" || "2") { %>
   <!-- LISTA DE BEBIDAS -->
   <div style="padding: 2% 2% 5% 2%; background-color: #a3927257; border-radius: 0.3rem; margin: 2% 2% 2% 2%;">
     <h2>PRODUCTOS</h2>
